more java and js sources